@@ -5,11 +5,11 @@
     * (www.oldmapsonline.org) from Ministry of Culture of the Czech Republic      *
 
 
-    Copyright (C) 2008-2009 Ruven Pillay.
+    Copyright (C) 2008-2011 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
-    the Free Software Foundation; either version 2 of the License, or
+    the Free Software Foundation; either version 3 of the License, or
     (at your option) any later version.
 
     This program is distributed in the hope that it will be useful,
@@ -168,7 +168,7 @@ void Zoomify::run( Session* session, const std::string& argument ){
 
 
   RawTile rawtile = tilemanager.getTile( resolution, tile, session->view->xangle,
-					 session->view->yangle, session->view->layers, ct );
+					 session->view->yangle, session->view->getLayers(), ct );
 
   int len = rawtile.dataLength;
 
